netradius-spring-errors-sample/src/main/java/com/netradius/spring/errors/sample/ExampleMessage.java
package com.netradius.spring.errors.sample;

import lombok.Data;

@Data
public class ExampleMessage {

  private String message;

}
